# CodeBlue

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  environment.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: development-plan.md
docs/architecture/: backend-slice.md  current-architecture-diagram.md  documentation-guidelines.md  frontend-screen-spec.md  frontend-stack-justifications.md  frontend-ux-plan.md  high-level-architecture.md  hsil-riscos-mapping.md  knowledge-ingestion-and-curation.md  knowledge-roadmap.md  knowledge-schema-design.md  knowledge-source-compiler-plan.md  layer-contracts.md  overall-architecture-layers.md  project-owner-brief.md  stack-justifications.md
docs/demo/: frontend-prototype.html  frontend-prototype.md  phase0-api.md
frontend/: README.md  index.html  package-lock.json  package.json
migrations/: env.py
tests/: __init__.py
workbook/: HSIL - abreviações.csv  HSIL - action_library.csv  HSIL - advanced_outbreak_monitoring_tools - FUTURO.csv  HSIL - deployment_seasonality_profile.csv  HSIL - ha_influenza_risk_factors.csv  HSIL - hospitalized_influenza_severity_factors.csv  HSIL - influenza_pack_interventions.csv  HSIL - influenza_pack_risk_features.csv  HSIL - influenza_pack_timing.csv  HSIL - library.csv  HSIL - pathogen_interactions.csv  HSIL - policy_source_library.csv  HSIL - policy_trigger_library.csv  HSIL - secondary_infections_in_influenza.csv  HSIL - staff_vector_transmission.csv  HSIL - transmission_context_support.csv  HSIL - trigger_action_map.csv
(+102 files in other folders)
