[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "codeblue"
version = "0.1.0"
description = "Modular hospital outbreak orchestration backend."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
  { name = "CodeBlue" },
]
dependencies = [
  "alembic>=1.14.1,<2.0.0",
  "fastapi>=0.115.12,<1.0.0",
  "networkx>=3.4.2,<4.0.0",
  "openpyxl>=3.1.5,<4.0.0",
  "pydantic-settings>=2.8.1,<3.0.0",
  "pydantic>=2.11.3,<3.0.0",
  "psycopg[binary]>=3.2.6,<4.0.0",
  "sqlalchemy>=2.0.40,<3.0.0",
  "uvicorn[standard]>=0.34.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1,<1.0.0",
  "mypy>=1.15.0,<2.0.0",
  "pre-commit>=4.2.0,<5.0.0",
  "pytest>=8.3.5,<9.0.0",
  "ruff>=0.11.4,<1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/codeblue"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
plugins = []
strict = true
warn_unused_configs = true
mypy_path = "src"
